--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ frozendict>=2.3.4
 beautifulsoup4>=4.11.1
 html5lib>=1.1
 peewee>=3.16.2
+yfinance~=0.2.31
+setuptools~=65.5.1
+python-dateutil~=2.8.2
+pytest~=7.4.3
+matplotlib~=3.8.2
